[project]
name = "uoft_switchconfig"
description = "A tool to easily provision switches on the bench"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
  "uoft_core",
  "Jinja2 >= 3.0",
  "pydantic >= 1.9.0",
  "arrow >= 1.1.1",
  "paramiko >= 2.7.2",

  # the pexpect project is still active but no longer seems to be making pypi releases
  # install from git instead
  "pexpect @ git+https://github.com/pexpect/pexpect@eb2820cec514c3ed5482e80ad3438cd31f2fa1ef",
  "rich >= 10.7.0",
]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/switchconfig"

[project.scripts]
uoft-switchconfig = "uoft_switchconfig.cli:cli"
uoft_switchconfig = "uoft_switchconfig.cli:deprecated"
"utsc.switchconfig" = "uoft_switchconfig.cli:deprecated"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_switchconfig"]
excludes = ["**/tests", "**/__pycache__"]
